Fix input fields font size on iOS, fix other departures problem with just one option available and add public transport codes

--- a/frontend/src/components/Sidebar/Results/ResultList/ResultListItem/ResultListItem.css
+++ b/frontend/src/components/Sidebar/Results/ResultList/ResultListItem/ResultListItem.css
@@ -66,6 +66,10 @@
     margin-top: 2px;
 }
 
+.public-pattern .detail-span {
+    margin-top: 17px;
+}
+
 .detail-span .detail-button {
     font-size: var(--font-size-detail);
     color: black;
@@ -122,6 +126,10 @@
 
 .hidden {
     display: none;
+}
+
+.pattern.public-pattern {
+    height: 95px;
 }
 
 /** End of file ResultListItem.css */
